# templates

./: .gitignore  LICENSE  README.md
latex/: listings.tex
latex/trm/: Makefile  trm.tex
latex/trm/sections/: overview.tex
makefiles/: CMakeLists.txt  Makefile-icarus-systemverilog  Makefile-icarus-verilog  Makefile-kernel  Makefile-sim  Makefile-simple  Makefile-systemverilog  Makefile-verilator-systemverilog-cpp  Makefile-verilator-verilog-cpp  Makefile-verilog  Makefile-vivado
tcl/: package_ip.tcl  project.tcl  quick_synth.tcl  settings.tcl  synth_check.tcl
